# profiling-projects

./: .gitignore  helpers.fish  pyproject.toml  quick-snips.txt
airflow/: Dockerfile  airflow-local-values.yaml  airflow-values.yaml  local-dags-pvc.yaml  pyproject.toml
airflow/dags/c_k8s_pod_example/: c_code_dag.py
airflow/dags/src/local/kubernetes/operators/: pod.py
airflow/src/: profile.py
cpp/: cpp.dockerfile  job.yaml  main.cpp
grafana/: grafana-agent-values.yaml  grafana-pvc.yaml
kafka/: kafka-cluster.yaml  kafka-topic.yaml
python/: old.python-job.yaml  python-job.yaml  python.dockerfile  timing_test.py
python/src/: profile.py
src/cli/: manage_k8s.py
src/cli/command_groups/: airflow.py  commander.py  docker.py  helm.py
src/local/kubernetes/operators/: pod.py
tsdb/: db-secret.yaml  deployment.yaml  external-service.yaml  performance_metrics.sql  pvc.yaml  statefulset.yaml
vector/: vector-values.yaml
