[project]
name = "profiling-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-apache-kafka>=1.9.0",
    "apache-airflow-providers-cncf-kubernetes",
    "apache-airflow-providers-celery>=3.3.0",
    "kafka-python>=2.2.15",
    "kubernetes",
    "nvidia-ml-py>=13.580.82",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "kubernetes>=33.1.0",
    "typer>=0.17.4",
]
venv-needed = [
    "apache-airflow>=3.0.6",
    "cryptography>=42.0.8"
]
